--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ footer-links:
   linkedin: karthikeyan-rajendran-56319639
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: rajkar86
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
