--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ name: Karthik Rajendran
 # Short bio or description (displayed in the header)
 # description: Web Developer from Somewhere
 
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-# avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+# URL of your avatar or profile pic 
+avatar: https://raw.githubusercontent.com/zeroisinfinity/zeroisinfinity.github.io/master/images/profile_pic.jpg
 
 #
 # Flags below are optional
