--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/zeroisinfinity/zeroisinfinity.github.i
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: karthikeyan.rajendran@gmail.com
   facebook:
   flickr:
   github: rajkar86
