--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Karthik Rajendran
 # description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic 
-avatar: https://raw.githubusercontent.com/zeroisinfinity/zeroisinfinity.github.io/master/images/profile_pic.jpg
+# avatar: https://raw.githubusercontent.com/zeroisinfinity/zeroisinfinity.github.io/master/images/profile_pic.jpg
 
 #
 # Flags below are optional
